attempting to fix layout issues.

--- a/app.css
+++ b/app.css
@@ -1,117 +1,103 @@
+
+* {
+    box-sizing: border-box;
+}
+
 html, body {
     height: 100%;
     margin: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #2e2e2e;}
-
-h1{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #2e2e2e;
 }
+
+h1 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 24px; /* Default size */
+}
+
 .navbutton {
     background-color: white;
     border: 4px solid black;
     border-radius: 5px;
-    padding: 10px 20px; 
-    text-decoration: none; 
+    padding: 10px 20px;
+    text-decoration: none;
     display: block;
-    font-size: 16px; 
-    font-family: Arial, sans-serif; 
-    transition: background-color 0.3s, border-color 0.3s; 
+    font-size: 16px;
+    font-family: Arial, sans-serif;
+    transition: background-color 0.3s, border-color 0.3s;
     cursor: pointer;
 }
 
-#videoFrame{
+#videoFrame {
     border-radius: 4px;
     box-sizing: border-box;
     position: absolute;
-    right: 90px;
+    right:5%;
     visibility: hidden;
     height: 84vh;
     width: 47.52vh;
-    bottom: 80px;
+    bottom: 8%;
     box-shadow: 0px 0px 0px;
 }
 
-#iFrameID{
+#iFrameID {
+    display: flex;
     justify-content: center;
 }
 
-#navbar a .navbutton h1{
+#navbar a .navbutton h1 {
     text-align: center;
     margin: 20px -20px;
 }
 
-#closerVideo{
-    position:fixed;
-    left: 1210px;
-    top: 58px;
+#closerVideo {
+    position: fixed;
+    left: 65%;
+    top: 3%;
     transform: scale(1.25);
+    cursor: pointer;
 }
+
 #closerVideo:hover {
     transform: scale(1.45);
 }
 
-
-span.navbutton{
-    width: 100px;
-    left: 27px;
+span.navbutton {
+    width: 144px;
     text-align: center;
+    left: 27px;
 }
 
-#homebutton{
+#homebutton, #mirage, #inferno, #dust, #vertigo, #nuke, #ancient, #anubis {
     position: relative;
-    top: 30px;
 }
 
-#mirage{
-    position: relative;
-    top: 50px;
-}
+#homebutton { top: 30px; }
+#mirage { top: 50px; }
+#inferno { top: 70px; }
+#dust { top: 90px; }
+#vertigo { top: 110px; }
+#nuke { top: 130px; }
+#ancient { top: 150px; }
+#anubis { top: 170px; }
 
-#inferno{
-    position: relative;
-    top: 70px;
-}
-
-#dust{
-    position: relative;
-    top: 90px;
-}
-
-#vertigo{
-    position: relative;
-    top: 110px;
-}
-
-#nuke{
-    position: relative;
-    top: 130px;
-}
-
-#ancient{
-    position: relative;  
-    top: 150px;
-}
-
-#anubis{
-    position: relative;
-    top: 170px;
-}
-.button{
+.button {
     text-decoration: none;
     color: black;
 }
 
 .navbutton:hover {
-    background-color: rgb(163, 163, 163); 
+    background-color: rgb(163, 163, 163);
 }
-.navbar{
+
+.navbar {
     z-index: 3;
     width: 200px;
     min-height: 1000px;
-    height: 100vh;
+    height: 100%;
     display: inline-block;
     background-color: #646464;
     position: absolute;
@@ -121,7 +107,7 @@ span.navbutton{
 }
 
 .map-container {
-    border: 3px solid rgb(73, 73, 73) ;
+    border: 3px solid rgb(73, 73, 73);
     position: absolute;
     width: 850px;
     height: 850px;
@@ -130,30 +116,29 @@ span.navbutton{
     border-radius: 10px;
     filter: blur(.2px);
     background-color: white;
-}
-#closerVideo:hover{
-    cursor: pointer;
+    align-items: center;
 }
 
-.title{
+.title {
     background-color: white;
     border: 2px solid rgb(145, 145, 145);
     box-shadow: 1px 1px 4px;
-    line-height: 1px;
+    line-height: 30px;
     position: absolute;
-    padding: 0 10px;
-    top: -85px;
+    padding: 0px 10px;
+    top: 0px;
+    left: 45%;
+    margin-top: -60px;
     filter: blur(.2px);
-    border-radius:10px;
-    left: 340px;
-    font-size: x-large;
+    border-radius: 10px;
+    font-size: xx-large;
 }
 
 .map {
     position: absolute;
-    width: 100%; 
-    height: 100%; 
-    z-index: 1; 
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
 .node {
@@ -175,14 +160,38 @@ span.navbutton{
 .node img {
     transition: transform 0.2s ease;
     display: block;
-    width: 20px; 
+    width: 20px;
+    height: 20px;
     justify-content: center;
-    height: 20px; 
 }
 
-.node img:hover{
+.node img:hover {
     transform: scale(1.50);
     transform-origin: center center;
     cursor: pointer;
     justify-content: center;
+}
+
+@media (max-width: 692px) {
+    .navbar {
+        visibility: hidden;
+    }
+    .navbutton{
+        visibility: hidden;
+    }
+    .map-container{
+        visibility: hidden;
+    }
+    #videoFrame {
+        height: 78vh;
+        width: 44vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        right: none;
+    }
+    #closerVideo {
+        left: 70%;
+    }
 }
